# ArchDesigner

./: .env  .gitignore  CMakeLists.txt  Cargo.toml  first_algo.json
migrations/2023-05-02-105145_create_accounts/: down.sql  up.sql
migrations/2023-05-02-105405_create_projects/: down.sql  up.sql
migrations/2023-05-07-153947_models/: down.sql  up.sql
migrations/2023-05-07-155413_meshs/: down.sql  up.sql
migrations/2023-05-07-172555_stage/: down.sql  up.sql
migrations/2023-05-07-173552_model_to_stage_link/: down.sql  up.sql
src/: auth.rs  config.rs  errors.rs  main.rs  schema.rs
src/database/: accounts.rs  meshs.rs  mod.rs  models.rs  projects.rs  stages.rs
src/models/: account.rs  meshs.rs  mod.rs  models.rs  projects.rs  stages.rs
src/routes/: accounts.rs  login.rs  meshs.rs  mod.rs  models.rs  projects.rs  stages.rs
toolkit/configuration/: Configuration.hpp
toolkit/first_algo/: main.cpp
toolkit/grid/: GridCell.hpp  NonUniformGrid.hpp
