[package]
name = "pack-designer"
version = "0.6.0"
edition = "2021"
license = "Unlicense OR MIT"

keywords = ["demo", "web", "realworld", "rocket"]
categories = ["web-programming"]

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rocket-multipart-form-data = "0.10.5"
rocket_contrib = { version = "0.4.11", default-features = false, features = ["uuid"] }
rocket_cors = { version = "0.6.0-alpha1", default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
scrypt = { version = "0.8.1", default-features = true }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.4", features = ["postgres", "chrono", "r2d2", "uuid"] }
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"
slug = "0.1.4"
rand = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.9.0"

[features]
default = ["random-suffix"]

# Enable generation of random suffix when making article slug. This
# allows having multiple articles with the same title.
random-suffix = []

[profile.dev.package."*"]
# Build dependencies with full release optimizations in debug builds.
# (Since they won't change often and probably do most of the heavy lifting)
opt-level = 3

[profile.dev]
# Build the project itself with just enough optimization to smooth out the
# most egregious of the abstractions which are only zero-cost when optimized
opt-level = 1
# Disable debug info in the binary to speed up builds
# Source: https://lemmy.ml/post/50089
debug = 0